# Eric_Qwen_Edit_Experiments

./: .gitignore  CLAUDE.md  Chroma-Ultra.json  DEV_NOTES.md  README.md  TECH_DEBT.md  analyze_checkpoint.py  component loader dev testing.json  convert_cascade_comfyui.py  dequantize_nf4.py  pyproject.toml  requirements.txt  test_cascade.py  test_flux2.py  test_iterate.py  test_manual_loop.py  test_multistage.py  test_params_schema.py  test_samplers.py  test_server_robustness.py
.claude/: settings.json
.claude/hooks/: check-ai-disclosure.sh
comfyless/: MANUAL.md  README.md  __init__.py  cascade.py  family_defaults.py  generate.py  server.py
docs/: comfyless-stable-cascade.md
nodes/: REMOVED.md  __init__.py  eric_diffusion_advanced_edit.py  eric_diffusion_advanced_edit_multistage.py  eric_diffusion_advanced_generate.py  eric_diffusion_advanced_multistage.py  eric_diffusion_component_loader.py  eric_diffusion_flux2_edit.py  eric_diffusion_generate.py  eric_diffusion_loader.py  eric_diffusion_lora_check.py  eric_diffusion_lora_stacker.py  eric_diffusion_manual_loop.py  eric_diffusion_multistage.py  eric_diffusion_samplers.py  eric_diffusion_save.py  eric_diffusion_scheduler.py  eric_diffusion_ultragen.py  eric_diffusion_utils.py  eric_lora_format_convert.py  eric_lora_format_convert_apply.py  eric_lora_format_convert_chroma.py  eric_lora_format_convert_flux.py  eric_qwen_controlnet_prompt_rewriter.py  eric_qwen_edit_component_loader.py  eric_qwen_edit_loader.py  eric_qwen_edit_lora.py  eric_qwen_edit_utils.py  eric_qwen_image_component_loader.py  eric_qwen_image_generate.py  eric_qwen_image_loader.py  eric_qwen_image_lora.py  eric_qwen_image_multistage.py  eric_qwen_image_ultragen.py  eric_qwen_image_ultragen_cn.py  eric_qwen_image_ultragen_inpaint_cn.py  eric_qwen_prompt_rewriter.py  eric_qwen_upscale_vae.py
tests/: lora_test_config.example.toml  lora_test_harness.py  test_lora_format_convert.py  test_lora_format_convert_apply.py  test_lora_format_convert_chroma.py  test_lora_format_convert_flux.py
(+21 files in other folders)
