[project]
name = "comfyui-eric-qwen-edit"
version = "3.1.0"
description = "ComfyUI nodes for Qwen-Image-Edit and Qwen-Image — 30 nodes for editing, generation, multi-stage, LoRA, Spectrum acceleration, ControlNet-guided generation, prompt rewriting, and 2× upscale VAE"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.11"
authors = [
    { name = "Eric Hiss", email = "eric@historic.camera" }
]
maintainers = [
    { name = "Eric Hiss", email = "eric@historic.camera" }
]
dependencies = [
    "torch==2.11.0",
    "diffusers==0.37.1",
    "transformers==5.5.3",
    "accelerate==1.13.0",
    "peft==0.18.1",
    "safetensors==0.7.0",
    "pillow==12.2.0",
    "numpy==2.4.4",
]

[project.urls]
Repository = "https://github.com/EricRollei/Eric_Qwen_Edit_Experiments"
Issues = "https://github.com/EricRollei/Eric_Qwen_Edit_Experiments/issues"

[tool.comfy]
PublisherId = "ericrollei"
DisplayName = "Eric Qwen-Edit & Qwen-Image Nodes"
Icon = ""
